Added About Me PAGE!

--- a/aboutme.html
+++ b/aboutme.html
@@ -23,4 +23,49 @@
         <a href="contact.html">Contact</a>
     </div>
 
-    <div class="stuff" id="first">
+    <div class="stuff" style="border:3px solid #ff0000;">
+        <p style="color:white;" style="font-size: 50px;">Hello! My name is Shain! I'm 20 years old and I was born and raised in Queens, NYC! My parents are Albanian and migrated here to NYC at a very young age, I also have a younger brother who is 12 years old!</p> 
+    </div>
+
+    <div class="stuff" style="border:5px dashed #ff0000;">
+        <img src="me.jpg" alt="me">
+    </div>
+
+    <div class="stuff" style="border:3px solid #ff0000;">
+        <p style="color:white;" style="font-size: 50px;">My Hobbies include creating clothing, playing video games, and working for companies as IT, helping manage queues in Confluence and Jira software!</p> 
+        <img src="jira.jpg" alt="jira" width="100px;" height="30px;">
+        <img src="confluence.png" alt="confluence" width="200px;" height="30px;">
+    </div>
+
+    <div class="stuff" style="border:3px solid #ff0000;">
+        <p style="color:white;" style="font-size: 50px;">This is my third year at City Tech! I am currently majoring in Emerging Media Technologies, and I'm hoping to continue my current work, along with clothing production on the side as I continue through my college career!</p> 
+    </div>
+
+    <div>
+        <canvas id="myCanvas2" width="500" height="600" style="border:1px solid #ff0000;"></canvas>
+        <script>
+            var canvas = document.getElementById("myCanvas2");
+            var ctx = canvas.getContext("2d");
+            ctx.fillStyle = "#FF0000";
+            ctx.fillRect(0, 20, 100, 75);
+            ctx.fillRect(200, 80, 100, 75);
+            ctx.fillRect(400, 140, 100, 75);
+            
+            ctx.fillRect(0, 140, 100, 75);
+            ctx.fillRect(200, 200, 100, 75);
+            ctx.fillRect(400, 260, 100, 75);
+
+            ctx.fillRect(0, 260, 100, 75);
+            ctx.fillRect(200, 320, 100, 75);
+            ctx.fillRect(400, 380, 100, 75);
+            
+            ctx.fillRect(0, 380, 100, 75);
+            ctx.fillRect(200, 440, 100, 75);
+            ctx.fillRect(400, 500, 100, 75);
+
+            ctx.fillRect(0, 500, 100, 75);
+            ctx.fillRect(200, 560, 100, 75);
+            ctx.fillRect(400, 620, 100, 75);
+
+        </script>
+    </div>
