--- a/aboutme.html
+++ b/aboutme.html
@@ -32,11 +32,11 @@
     </div>
 
     <div class="stuff5">
-        <p style="color:white;" style="font-size: 50px;">My Hobbies include creating clothing, playing video games, and working for companies as a contractor, helping manage queues in Confluence and Jira software!</p> 
+        <p style="color:white;" style="font-size: 50px;">My Hobbies include creating clothing, playing video games, and working for companies as a contractor, helping manage queues in Confluence and Jira software.</p> 
         <img src="jira.jpg" alt="jira" width="200px;" height="55px;">
         <img src="confluence.png" alt="confluence" width="300px;" height="50px;">
     </div>
 
     <div class="stuff5">
-        <p style="color:white;" style="font-size: 50px;">This is my third year at City Tech! I am currently majoring in Emerging Media Technologies, and I'm hoping to continue my current work, along with clothing production on the side as I continue through my college career!</p> 
+        <p style="color:white;" style="font-size: 50px;">This is my third year at City Tech, I am currently majoring in Emerging Media Technologies, and I'm hoping to continue my current work, along with clothing production on the side as I continue through my college career!</p> 
     </div>
