--- a/myportfolio.html
+++ b/myportfolio.html
@@ -25,7 +25,7 @@
 
 <div class="stuff3">
  <p style="color:white;" style="font-size: 30px;">In this section you will see my portfolio, it will mainly consist of
-  my clothing, you'll be able to see some of the pieces I've made! Each piece I make is a 1 of 1, each person gets a slightly
+  my clothing, you'll be able to see some of the pieces I've made. Each piece I make is a 1 of 1, each person gets a slightly
   different piece, and they have the ability to ask for it to be customized. When creating my clothing I like to go for a darker
   more grunge look, and that's what you can see here!</p> 
 </div>
